--- a/etc/ftxtx/ftxtx.conf
+++ b/etc/ftxtx/ftxtx.conf
@@ -1,13 +1,21 @@
 
 ##################
-txtViewer=leafpad
-
 # txtViewer examples: 
 #
-# sakura -e vim
-# geany
+# xdg-open 
+# sakura -e vim 
+# geany 
 # leafpad 
-# abiword
+# abiword 
 # .....
-##################
 
+##################
+# 
+# fm examples: 
+# xdg-open
+# run-as-user xterm -e ranger
+# xterm -e mc
+# 
+
+fm=xdg-open
+txtViewer=xdg-open
